fixed avator double border

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1300,6 +1300,12 @@ input, select, textarea {
 				display: none;
 			}
 
+		#header .avatar {
+			width: 7.4rem;
+			height: 7.4rem;
+			border-radius: 100%;
+		}
+
 		#header .logo {
 			width: 7.5rem;
 			height: 7.5rem;
